--- a/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
@@ -228,6 +228,7 @@ cards:
                 device_class: battery
           exclude:
             - domain: binary_sensor
+            - state: "100"
 
       - type: custom:auto-entities
         card:
@@ -262,7 +263,7 @@ cards:
               - calendar.trash
             layout: vertical
             next_days: 5
-            items_per_row: 3
+            items_per_row: 4
             day_style: counter
             hide_time_range: true
             use_summary: false
