--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -160,6 +160,7 @@ cards:
             - type: custom:button-card
               template: chip_icon_state_if_value
               variables:
+                optional: true
                 entity: input_boolean.dishwasher_needs_cleaned
                 navigation_path: /the-matrix/kitchen
             - type: custom:button-card
