--- a/automations/systems/alert_to_persistent.yaml
+++ b/automations/systems/alert_to_persistent.yaml
@@ -38,12 +38,22 @@ action:
 
     # if notify.family_ai is used - call ai then notify.family
     # not triggered if clear_notification used
+    # not triggered if everyone muted
     - conditions:
         - condition: trigger
           id: create-ai
         - not: "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
+        - alias: Someone not muted
+          or:
+            - condition: state
+              entity_id: input_boolean.gina_mute
+              state: "off"
+            - condition: state
+              entity_id: input_boolean.poat_mute
+              state: "off"
       sequence:
-        - action: google_generative_ai_conversation.generate_content
+        - alias: Call Google Gemini AI to generate message
+          action: google_generative_ai_conversation.generate_content
           continue_on_error: true
           data:
             prompt: >-
@@ -61,8 +71,8 @@ action:
                 ] | random
               }}
           response_variable: generated_content
-        - action: notify.family
-          data:
+        - alias: Set variable for message
+          variables:
             message: >-
               {% set ai_response = generated_content['text'] if (generated_content is defined) else trigger.event.data.service_data.data.backup %}
 
@@ -73,9 +83,38 @@ action:
               {% else %}
                 {{ ai_response }}
               {% endif %}
+        - alias: See if Poat not muted
+          if:
+            - condition: state
+              entity_id: input_boolean.poat_mute
+              state: "off"
+          then:
+            - alias: Notify Poat
+              action: notify.mobile_app_poat_s_iphone_14_pro_max
+              data:
+                message: "{{ message }}"
+                title: "{{ trigger.event.data.service_data.title }}"
+                data:
+                  tag: "{{ trigger.event.data.service_data.data.tag }}"
+        - alias: See if Gina not muted
+          if:
+            - condition: state
+              entity_id: input_boolean.gina_mute
+              state: "off"
+          then:
+            - alias: Notify Gina
+              action: notify.mobile_app_gina_s_iphone_13_mini
+              data:
+                message: "{{ message }}"
+                title: "{{ trigger.event.data.service_data.title }}"
+                data:
+                  tag: "{{ trigger.event.data.service_data.data.tag }}"
+        - alias: Create persistent notification
+          action: persistent_notification.create
+          data:
+            message: "{{ trigger.event.data.service_data.message }}"
             title: "{{ trigger.event.data.service_data.title }}"
-            data:
-              tag: "{{ trigger.event.data.service_data.data.tag }}"
+            notification_id: "{{ trigger.event.data.service_data.data.tag }}"
 
     # if notify.family_ai is used - call notify.family with clear_notification
     # triggered if clear_notification used
