--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -150,6 +150,7 @@ cards:
             - type: custom:button-card
               template: chip_icon_state_if_value
               variables:
+                optional: true
                 entity: sensor.seedbox_vpn_on
                 navigation_path: /the-matrix/network
             - type: custom:button-card
