--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -139,12 +139,6 @@ cards:
               template: chip_icon_state_if_value
               variables:
                 optional: true
-                entity: binary_sensor.strong_boi_error
-                navigation_path: /the-matrix/garage
-            - type: custom:button-card
-              template: chip_icon_state_if_value
-              variables:
-                optional: true
                 entity: sensor.updates_available
                 navigation_path: /the-matrix/network?anchor=updates
             - type: custom:button-card
@@ -375,6 +369,7 @@ cards:
             entity_id: binary_sensor.garage_door_tilt_window_door_is_open
             templates:
               - red_on
+              - green_off
             tap_action:
               action: call-service
               service: switch.toggle
