--- a/automations/utilities/washer_and_dryer.yaml
+++ b/automations/utilities/washer_and_dryer.yaml
@@ -7,7 +7,7 @@ alias: Washer & Dryer
 id: 00375bc8-c223-4914-a3d1-981a92fb915c
 
 trigger:
-  - platform: numeric_state
+  - trigger: numeric_state
     entity_id: sensor.clothes_washer_13_1min
     id: washer_on
     above: 20
@@ -16,7 +16,7 @@ trigger:
       input_entity: input_boolean.washing_machine_on
       end_entity: input_boolean.washing_machine_end
 
-  - platform: numeric_state
+  - trigger: numeric_state
     entity_id: sensor.clothes_washer_13_1min
     below: 2
     for: "00:20:00" # handle pause in soak
@@ -25,7 +25,7 @@ trigger:
       input_entity: input_boolean.washing_machine_on
       end_entity: input_boolean.washing_machine_end
 
-  - platform: numeric_state
+  - trigger: numeric_state
     entity_id: sensor.dryer_1_1min
     above: 500
     for: "00:00:10"
@@ -34,7 +34,7 @@ trigger:
       input_entity: input_boolean.dryer_on
       end_entity: input_boolean.dryer_end
 
-  - platform: numeric_state
+  - trigger: numeric_state
     entity_id: sensor.dryer_1_1min
     below: 5
     for: "00:00:10"
@@ -43,7 +43,7 @@ trigger:
       input_entity: input_boolean.dryer_on
       end_entity: input_boolean.dryer_end
 
-  - platform: device
+  - trigger: device
     type: opened
     device_id: 357bc954ebb6225a55ae7d8b81f1fca7
     entity_id: 4986450410536f6afbeaefa26a3fd5ce
@@ -62,16 +62,16 @@ action:
           - condition: template
             value_template: '{{ states(input_entity)  == "off" }}'
         sequence:
-          - service: input_boolean.turn_on
+          - action: input_boolean.turn_on
             target:
               entity_id: "{{ input_entity }}"
-          - service: input_boolean.turn_off
+          - action: input_boolean.turn_off
             target:
               entity_id: "{{ end_entity }}"
           - condition: trigger
             id:
               - dryer_on
-          - service: input_boolean.turn_off
+          - action: input_boolean.turn_off
             target:
               entity_id: input_boolean.washing_machine_end
 
@@ -83,10 +83,10 @@ action:
           - condition: template
             value_template: '{{ states(input_entity)  == "on" }}'
         sequence:
-          - service: input_boolean.turn_off
+          - action: input_boolean.turn_off
             target:
               entity_id: "{{ input_entity }}"
-          - service: input_boolean.turn_on
+          - action: input_boolean.turn_on
             target:
               entity_id: "{{ end_entity }}"
 
@@ -95,6 +95,6 @@ action:
             id:
               - dryer_door
         sequence:
-          - service: input_boolean.turn_off
+          - action: input_boolean.turn_off
             target:
               entity_id: "{{ end_entity }}"
