--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -296,6 +296,10 @@ cards:
             entity_id: light.dinette_light
             templates:
               - yellow_on
+          entity_4:
+            entity_id: switch.dinette_fan
+            templates:
+              - blue_on
 
       #################
       # MASTER BEDROOM
