--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -40,12 +40,19 @@ cards:
         template: card_title
         label: Devices
 
-      - type: "custom:button-card"
-        template: card_light
-        entity: light.master_bedroom_light
-        variables:
-          ulm_card_light_enable_slider: true
-          ulm_card_light_enable_collapse: true
+      - type: horizontal-stack
+        cards:
+          - type: "custom:button-card"
+            template: card_light
+            entity: light.master_bedroom_light
+            variables:
+              ulm_card_light_enable_slider: true
+              ulm_card_light_enable_collapse: true
+          - type: "custom:button-card"
+            template: card_light
+            entity: switch.master_bedroom_fan
+            variables:
+              ulm_card_light_color: blue
 
       - type: custom:decluttering-card
         template: cover
@@ -90,9 +97,11 @@ cards:
           - node_number: 10
 
       - type: custom:decluttering-card
-        template: z_wave_single_relay
+        template: z_wave_double_switch
         variables:
-          - sensor_prefix: master_bedroom_light
+          - sensor_prefix: master_bedroom
           - sensor_domain: light
-          - name: Light
-          - node_number: 30
+          - name: Ceiling Fan
+          - node_number: 50
+          - switch1: light
+          - switch2: switch.master_bedroom_fan
