kitchen lights scenes

--- a/automations/tags/turn_off_house.yaml
+++ b/automations/tags/turn_off_house.yaml
@@ -7,14 +7,14 @@ id: 1e7a8457-9e1c-4914-923a-e1591e0d553a
 mode: single
 
 trigger:
-  - platform: tag
+  - trigger: tag
     tag_id: e50d2545-c7a8-4f89-acf2-e4e15f4e8086
-  - platform: tag
+  - trigger: tag
     tag_id: a699a65f-9ca2-47fa-add4-e23bf88f45fc
 
 action:
-  - service: script.turn_off_house
-  - service: climate.set_temperature
+  - action: script.turn_off_house
+  - action: climate.set_temperature
     data:
       hvac_mode: cool
       temperature: 71
