--- a/entities/lights/kitchen_lights.yaml
+++ b/entities/lights/kitchen_lights.yaml
@@ -7,6 +7,6 @@ name: Kitchen Bulbs
 unique_id: c43d67fa-af28-4ee6-b2c4-bfe29351b0f9
 entities:
   - light.kitchen_bulb_1
-  - light.le_rgbcwbr30_3
+  - light.kitchen_bulb_2
   - light.kitchen_bulb_3
-  - light.le_rgbcwbr30
+  - light.kitchen_bulb_4
