--- a/scripts/utilities/turn_off_house.yaml
+++ b/scripts/utilities/turn_off_house.yaml
@@ -11,10 +11,10 @@ turn_off_house:
           target:
             entity_id:
               - light.kitchen_bulbs
-              - light.le_rgbcwbr30_3
-              - light.le_rgbcwbr30
               - light.kitchen_bulb_1
+              - light.kitchen_bulb_2
               - light.kitchen_bulb_3
+              - light.kitchen_bulb_4
               - light.master_bedroom_light
               - light.pretty_fly_for_a_wifi_garage_status_light
               - light.pretty_fly_for_a_wifi_living_room_status_light
