--- a/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
@@ -145,7 +145,7 @@ cards:
                     ulm_card_light_name: Bulb 1
                 - type: "custom:button-card"
                   template: card_light
-                  entity: light.le_rgbcwbr30_3
+                  entity: light.kitchen_bulb_2
                   variables:
                     ulm_card_light_enable_color: true
                     ulm_card_light_name: Bulb 2
@@ -157,7 +157,7 @@ cards:
                     ulm_card_light_name: Bulb 3
                 - type: "custom:button-card"
                   template: card_light
-                  entity: light.le_rgbcwbr30
+                  entity: light.kitchen_bulb_4
                   variables:
                     ulm_card_light_enable_color: true
                     ulm_card_light_name: Bulb 4
@@ -177,6 +177,10 @@ cards:
                   entity_id: script.kitchen_bulbs_tokyo_dynamic
                   color: pink
                   name: Tokyo
+                entity_4:
+                  entity_id: script.kitchen_bulbs_jolly_dynamic
+                  color: green
+                  name: Jolly
 
       - type: custom:decluttering-card
         template: cover
