--- a/automations/devices/xbox-tv-control.yaml
+++ b/automations/devices/xbox-tv-control.yaml
@@ -26,11 +26,11 @@ action:
       sequence:
         action: media_player.turn_on
         target:
-          entity_id: media_player.office_fire_tv
+          entity_id: media_player.office_tv
     - conditions:
         condition: trigger
         id: xbox-off
       sequence:
         action: media_player.turn_off
         target:
-          entity_id: media_player.office_fire_tv
+          entity_id: media_player.office_tv
